<resources>
    <string name="app_name">Memories</string>
    <string name="title_activity_login">Login</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register Here</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Reenter password</string>
    <string name="search">Search</string>
    <string name="vacations">Vacations</string>
    <string name="friends">Friends</string>
</resources>
