<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.version1.andreascrona.memories.RegisterActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameTxt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:hint="@string/username"
        android:textAlignment="center" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailTxt"
        android:layout_below="@+id/usernameTxt"
        android:layout_alignRight="@+id/usernameTxt"
        android:layout_alignEnd="@+id/usernameTxt"
        android:hint="@string/email"
        android:textAlignment="center" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordTxt"
        android:layout_below="@+id/emailTxt"
        android:layout_alignLeft="@+id/emailTxt"
        android:layout_alignStart="@+id/emailTxt"
        android:hint="@string/password"
        android:textAlignment="center" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/repasswordTxt"
        android:layout_below="@+id/passwordTxt"
        android:layout_alignRight="@+id/passwordTxt"
        android:layout_alignEnd="@+id/passwordTxt"
        android:hint="@string/repassword"
        android:textAlignment="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_register"
        android:id="@+id/register_btn"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/repasswordTxt"
        android:layout_centerHorizontal="true"
        android:onClick="registerOnclick" />

</RelativeLayout>
