<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.version1.andreascrona.memories.LoginActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameTxt"
        android:hint="@string/username"
        android:layout_above="@+id/passwordTxt"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordTxt"
        android:password="true"
        android:gravity="left"
        android:hint="@string/password"
        android:layout_above="@+id/login_btn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        android:id="@+id/login_btn"
        android:onClick="loginClick"
        android:layout_above="@+id/register_btn"
        android:layout_alignLeft="@+id/usernameTxt"
        android:layout_alignStart="@+id/usernameTxt" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerBtn"
        android:id="@+id/register_btn"
        android:onClick="registerClick"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/login_btn"
        android:layout_alignStart="@+id/login_btn" />

</RelativeLayout>
